--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="keywords" content="emergency electrician Sydney, electrical services, Woova electrician">
   <meta property="og:title" content="Sydney Electrical Pros">
   <meta property="og:description" content="24/7 Emergency Electrician in Sydney">
-  <meta property="og:image" content="hero-bg.jpg">
+  <meta property="og:image" content="her0-bg.jpg">
   <title>Sydney Electrical Pros</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
