--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 
 <style>
   .hero {
-    background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('hero-bg.jpg') no-repeat center/cover;
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('hero-bg.jpg') no-repeat center/cover; /* Darker overlay */
     height: 400px;
     display: flex;
     flex-direction: column;
