--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="keywords" content="emergency electrician Sydney, electrical services, Woova electrician">
   <meta property="og:title" content="Sydney Electrical Pros">
   <meta property="og:description" content="24/7 Emergency Electrician in Sydney">
-  <meta property="og:image" content="hero-bg.jpg">
+  <meta property="og:image" content="heroo-bg.jpg">
   <title>Sydney Electrical Pros</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -22,7 +22,7 @@
     header nav { margin-top: 0.5em; }
     header nav a { color: white; text-decoration: none; margin: 0 0.5em; transition: color 0.3s; }
     header nav a:hover { color: #001F3F; } /* Navy hover for links */
-    .hero { background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), #e0e7ff url('hero-bg.jpg') no-repeat center/cover; height: 400px; display: flex; flex-direction: column; align-items: center; justify-content: center; text-align: center; color: #FF9900; animation: fadeIn 1s ease-in; }
+    .hero { background: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), #e0e7ff url('heroo-bg.jpg') no-repeat center/cover; height: 400px; display: flex; flex-direction: column; align-items: center; justify-content: center; text-align: center; color: #FF9900; animation: fadeIn 1s ease-in; }
     .hero h1 { font-size: 2.5em; margin-bottom: 0.5em; color: #fff; text-shadow: 1px 1px 2px #001F3F; } /* White text with navy shadow */
     .hero p { font-size: 1.2em; color: #fff; text-shadow: 1px 1px 2px #001F3F; }
     .hero .contact-btn { margin-top: 1em; padding: 0.5em 1em; background: #FF9900; color: white; text-decoration: none; border-radius: 5px; border: 2px solid #001F3F; } /* Orange button with navy border */
@@ -59,10 +59,10 @@
     .honeypot { display: none; }
 
     @media (max-width: 600px) {
-      .hero { height: 200px; }
-      .hero h1 { font-size: 1.5em; }
-      .hero p { font-size: 1em; }
-      .hero .phone { font-size: 1em; }
+      . { height: 200px; }
+      . h1 { font-size: 1.5em; }
+      . p { font-size: 1em; }
+      . .phone { font-size: 1em; }
       .service-grid { grid-template-columns: 1fr; padding: 0; }
       header nav a { margin: 0 0.3em; }
       .contact form { margin: 0; }
@@ -88,7 +88,7 @@
       },
       "description": "24/7 Emergency Electrician in Sydney South West, Eastern Beaches & Inner City. Licensed, insured, residential & commercial via Woova.",
       "openingHours": "24/7",
-      "image": "hero-bg.jpg"
+      "image": "heroo-bg.jpg"
     }
   </script>
 </head>
@@ -104,7 +104,7 @@
       <a href="#contact">Contact</a>
     </nav>
   </header>
- <div class="hero" id="home" style="background-image: url('hero-bg.jpg');">
+ <div class="hero" id="home" style="background-image: url('heroo-bg.jpg');">
   <h1>24/7 Emergency Electrician</h1>
   <p>Serving Sydney South West, Eastern Beaches & Inner City. Licensed & Insured.</p>
   <a href="#contact" class="contact-btn">Book Now</a>
@@ -113,7 +113,7 @@
 
 <style>
   .hero {
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('hero-bg.jpg') no-repeat center/cover; /* Darker overlay */
+    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('heroo-bg.jpg') no-repeat center/cover; /* Darker overlay */
     height: 400px;
     display: flex;
     flex-direction: column;
